--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,4 @@
 # This file lists all individuals having contributed content to the repository.
 
-Ian Daniel <>
+Ian Daniel <iandan874@gmail.com>
 Mike Odhiambo <odhiambomike413@gmail.com>
